@@ -96,6 +96,7 @@ set(QT_USE_QTUITOOLS TRUE)
 set(QT_USE_QTDESIGNER TRUE)
 set(QT_USE_QTSCRIPT   TRUE)
 set(QT_USE_QTSCRIPTTOOLS   TRUE)
+set(QT_USE_QTWEBKIT   TRUE)
 
 find_package(Qt4 "4.6")
 
